--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,60 +7,85 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Categories\Commands\" />
-    <Folder Include="Features\Categories\Dtos\" />
-    <Folder Include="Features\Categories\Models\" />
     <Folder Include="Features\Categories\Rules\" />
     <Folder Include="Features\Categories\Queries\" />
     <Folder Include="Features\Categories\Profiles\" />
-    <Folder Include="Features\Customers\Commands\" />
+    <Folder Include="Features\Customers\Commands\Create\" />
+    <Folder Include="Features\Customers\Commands\Delete\" />
+    <Folder Include="Features\Customers\Commands\Update\" />
     <Folder Include="Features\Customers\Dtos\" />
     <Folder Include="Features\Customers\Models\" />
     <Folder Include="Features\Customers\Profiles\" />
     <Folder Include="Features\Customers\Queries\" />
     <Folder Include="Features\Customers\Rules\" />
-    <Folder Include="Features\Employees\Commands\" />
+    <Folder Include="Features\Employees\Commands\Create\" />
+    <Folder Include="Features\Employees\Commands\Delete\" />
+    <Folder Include="Features\Employees\Commands\Update\" />
     <Folder Include="Features\Employees\Dtos\" />
     <Folder Include="Features\Employees\Models\" />
     <Folder Include="Features\Employees\Profiles\" />
     <Folder Include="Features\Employees\Queries\" />
     <Folder Include="Features\Employees\Rules\" />
-    <Folder Include="Features\Orders\Commands\" />
+    <Folder Include="Features\Orders\Commands\Create\" />
+    <Folder Include="Features\Orders\Commands\Delete\" />
+    <Folder Include="Features\Orders\Commands\Update\" />
     <Folder Include="Features\Orders\Dtos\" />
     <Folder Include="Features\Orders\Models\" />
     <Folder Include="Features\Orders\Profiles\" />
     <Folder Include="Features\Orders\Queries\" />
     <Folder Include="Features\Orders\Rules\" />
-    <Folder Include="Features\Products\Commands\" />
+    <Folder Include="Features\Products\Commands\Create\" />
+    <Folder Include="Features\Products\Commands\Delete\" />
+    <Folder Include="Features\Products\Commands\Update\" />
     <Folder Include="Features\Products\Dtos\" />
     <Folder Include="Features\Products\Models\" />
     <Folder Include="Features\Products\Profiles\" />
     <Folder Include="Features\Products\Queries\" />
     <Folder Include="Features\Products\Rules\" />
-    <Folder Include="Features\Reciepes\Commands\" />
+    <Folder Include="Features\Reciepes\Commands\Create\" />
+    <Folder Include="Features\Reciepes\Commands\Delete\" />
+    <Folder Include="Features\Reciepes\Commands\Update\" />
     <Folder Include="Features\Reciepes\Dtos\" />
     <Folder Include="Features\Reciepes\Models\" />
     <Folder Include="Features\Reciepes\Profiles\" />
     <Folder Include="Features\Reciepes\Queries\" />
     <Folder Include="Features\Reciepes\Rules\" />
-    <Folder Include="Features\StockInRecieps\Commands\" />
+    <Folder Include="Features\StockInRecieps\Commands\Create\" />
+    <Folder Include="Features\StockInRecieps\Commands\Delete\" />
+    <Folder Include="Features\StockInRecieps\Commands\Update\" />
     <Folder Include="Features\StockInRecieps\Dtos\" />
     <Folder Include="Features\StockInRecieps\Models\" />
     <Folder Include="Features\StockInRecieps\Profiles\" />
     <Folder Include="Features\StockInRecieps\Queries\" />
     <Folder Include="Features\StockInRecieps\Rules\" />
-    <Folder Include="Features\Stockpiles\Commands\" />
+    <Folder Include="Features\Stockpiles\Commands\Create\" />
+    <Folder Include="Features\Stockpiles\Commands\Delete\" />
+    <Folder Include="Features\Stockpiles\Commands\Update\" />
     <Folder Include="Features\Stockpiles\Dtos\" />
     <Folder Include="Features\Stockpiles\Models\" />
     <Folder Include="Features\Stockpiles\Profiles\" />
     <Folder Include="Features\Stockpiles\Queries\" />
     <Folder Include="Features\Stockpiles\Rules\" />
-    <Folder Include="Features\Users\Commands\" />
+    <Folder Include="Features\Users\Commands\Create\" />
+    <Folder Include="Features\Users\Commands\Delete\" />
+    <Folder Include="Features\Users\Commands\Update\" />
     <Folder Include="Features\Users\Dtos\" />
     <Folder Include="Features\Users\Models\" />
     <Folder Include="Features\Users\Profiles\" />
     <Folder Include="Features\Users\Queries\" />
     <Folder Include="Features\Users\Rules\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.2.2" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\vlikcc\Kodlama.io.Devs\src\corePackages\Core.Application\Core.Application.csproj" />
+    <ProjectReference Include="..\..\vlikcc\Kodlama.io.Devs\src\corePackages\Core.Security\Core.Security.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
