--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "AlanyaNArchitectureConnectionString": "Server=(localDB)\\MSSQLLocalDB;Database=alanyaDb; Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
