--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "AlanyaNArchitectureConnectionString": "Server=(localDB)\\MSSQLLocalDB;Database=alanyaDb; Trusted_Connection=True;"
+    "AlanyaConnectionString": "Server=(localDB)\\MSSQLLocalDB;Database=Aalanya; Trusted_Connection=True;"
+    
   },
   "AllowedHosts": "*"
 }
